crates/monosecret/tests/snapshots/cli_snapshots__check_missing_required.snap
---
source: crates/monosecret/tests/cli_snapshots.rs
info:
  program: monosecret
  args:
    - "--reason"
    - test
    - check
    - "--no-prompt"
    - "--provider"
    - local
  env:
    HOME: /tmp/monosecret-cli-snapshots-check-missing-required
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
note: monosecret is now recording secret access to [TMPDIR] (disable with [audit] enabled = false in ~/.config/monosecret/config.toml)
Checking secrets in demo (profile: default)...

✗ API_TOKEN - API token (required)

Summary: 0 found, 1 missing
Error:   × Failed to check secrets
  ╰─▶ Secret 'API_TOKEN' is required but not set
