crates/monosecret/tests/snapshots/cli_snapshots__env_bash.snap
---
source: crates/monosecret/tests/cli_snapshots.rs
info:
  program: monosecret
  args:
    - "--reason"
    - test
    - env
    - "--shell"
    - bash
    - "--provider"
    - local
  env:
    HOME: /tmp/monosecret-cli-snapshots-env-bash
---
success: true
exit_code: 0
----- stdout -----
export API_TOKEN='secret';
export DATABASE_URL='postgres://localhost';

----- stderr -----
note: monosecret is now recording secret access to [TMPDIR] (disable with [audit] enabled = false in ~/.config/monosecret/config.toml)
