crates/monosecret/tests/snapshots/cli_snapshots__env_dotenv.snap
---
source: crates/monosecret/tests/cli_snapshots.rs
info:
  program: monosecret
  args:
    - "--reason"
    - test
    - env
    - "--shell"
    - dotenv
    - "--provider"
    - local
  env:
    HOME: /tmp/monosecret-cli-snapshots-env-dotenv
---
success: true
exit_code: 0
----- stdout -----
API_TOKEN="secret"
DATABASE_URL="postgres://localhost"

----- stderr -----
note: monosecret is now recording secret access to [TMPDIR] (disable with [audit] enabled = false in ~/.config/monosecret/config.toml)
