crates/monosecret/tests/snapshots/cli_snapshots__get_secret_value.snap
---
source: crates/monosecret/tests/cli_snapshots.rs
info:
  program: monosecret
  args:
    - "--reason"
    - test
    - get
    - API_TOKEN
    - "--provider"
    - local
  env:
    HOME: /tmp/monosecret-cli-snapshots-get-secret-value
---
success: true
exit_code: 0
----- stdout -----
my-secret-token
----- stderr -----
