crates/monosecret/tests/snapshots/cli_snapshots__help_output.snap
---
source: crates/monosecret/tests/cli_snapshots.rs
info:
  program: monosecret
  args:
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
A declarative interface for every secret provider. https://monosecret.dev

Usage: monosecret [OPTIONS] <COMMAND>

Commands:
  init         Initialize a new monosecret.toml (optionally, from a provider)
  add          Add a secret declaration to monosecret.toml (0.18+)
  set          Set a secret value
  get          Get a secret value
  delete       Delete stored secret values from a provider (0.18+)
  run          Run a command with secrets injected
  manifest     Emit a secret-value-free manifest for SDK code generation
  export       Resolve secrets and print them for another tool to consume
  check        Check if all required secrets are in the provider, if not set them
  schema       Emit a JSON Schema for the manifest's typed shape
  completions  Generate shell completion scripts (0.20+)
  config       Manage Monosecret configuration
  docker       Manage Docker registry credential integration (0.20+)
  git          Configure Git HTTP(S) or SMTP credentials through Monosecret (0.20+)
  claude       Manage Claude Code API credential integration (0.4.0+)
  import       Import secrets from a provider to another provider
  cache        Manage cached provider values (0.17+)
  serve        Serve one `monosecret.resolver/1` session over stdin and stdout (0.4.0+)
  audit        Show the local audit log of secret access
  env          Load resolved secrets into a shell or CI environment
  help         Print this message or the help of the given subcommand(s)

Options:
  -f, --file <FILE>
          Path to monosecret.toml (default: auto-detect by walking up from current directory) [env: MONOSECRET_FILE=]
  -v, --verbose...
          Increase diagnostic logging (`-v` for debug, `-vv` for trace). Can also use `RUST_LOG=debug` or `RUST_LOG=trace`
      --reason <REASON>
          Reason for accessing secrets, recorded by providers that support audit logging (e.g. Proton Pass agent sessions). Takes precedence over the PROTON_PASS_AGENT_REASON environment variable [env: MONOSECRET_REASON=]
      --caller <CALLER>
          Software integration invoking Monosecret, recorded as caller context without satisfying the access-reason policy (0.20+)
      --caller-version <CALLER_VERSION>
          Version of the software integration named by --caller (0.20+)
      --caller-operation <CALLER_OPERATION>
          Operation the software integration is performing (0.20+)
      --caller-resource <CALLER_RESOURCE>
          Non-secret resource the software integration is accessing (0.20+)
  -h, --help
          Print help
  -V, --version
          Print version

----- stderr -----
